Fix home link on mobile when first path is not home
The link was not clickable because the canvas was on top of it.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html, body {
 #introCanvas {
   z-index: 1;
   position: absolute;
+  display: none;
 }
 
 #root {
